@@ -14,6 +14,7 @@ The following bugs are resolved with this release:
   [24867] malloc: Remove unwanted leading whitespace in malloc_info
   [24986] alpha: new getegid, geteuid and getppid syscalls used
     unconditionally
+  [25189] Don't use a custom wrapper macro around __has_include
 
 
 Version 2.30
